<?xml version="1.0"?>
<package format="2">
  <name>val_soft_estop_monitor</name>
  <version>0.0.0</version>
  <description>Package for monitoring conditions that may require soft e-stop on NASA's Valkyrie robot.</description>

  <maintainer email="esheetz@umich.edu">Emily Sheetz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
